# Services-map

./: README.md  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.Docker.md  README.md  manage.py  pyproject.toml  schema.yml
backend/api_app/: admin.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/servicemap/: asgi.py  logging_config.py  settings.py  urls.py  wsgi.py
frontend/: README.md  output_file.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: index.tsx
frontend/src/components/Auth/: Login.tsx  Logout.tsx
frontend/src/components/EditingTable/: EditingTable.tsx  ServiceDialog.tsx  ServiceGrid.tsx
frontend/src/components/Nav/: MainNavbar.tsx
frontend/src/components/Tables/: DataTable.tsx  RowDetails.tsx  SearchBar.tsx  Tables.tsx
frontend/src/components/context/: AppThemeContext.tsx
frontend/src/config/: defaults.jsx
frontend/src/utils/: api.tsx
